* Bugfix: Prevent linebreak in searchlist panelwidget with longer link element

--- a/core/asset/css/panelwidget-searchlist.scss
+++ b/core/asset/css/panelwidget-searchlist.scss
@@ -38,6 +38,6 @@
 			display:block;
 			padding-left:25px;
 			height:18px;
-			width:250px; }
+			width:400px; }
 	}
 }
